objects/AIA_Plan_Limitation__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_ASO_Only__c</fullName>
        <formula>text(Plan_Benefits__r.IS_ASO_Only__c)</formula>
        <label>IS ASO Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jurisdiction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitation_available__c</fullName>
        <formula>OR(NOT(ISBLANK(TierLimitTo__c)), NOT(ISBLANK(TEXT(TierAgeType__c))), NOT(ISBLANK(MaxValue__c)), NOT(ISBLANK(MaxAgeFrom__c)))</formula>
        <label>Limitation_available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MandateIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MandateIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MandateName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MandateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxAgeFrom__c</fullName>
        <label>MaxAgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxAgeTo__c</fullName>
        <label>MaxAgeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxAgeType__c</fullName>
        <label>MaxAgeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Years of Age</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxApply__c</fullName>
        <label>MaxApply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Breast</fullName>
                </value>
                <value>
                    <fullName>Per Condition</fullName>
                </value>
                <value>
                    <fullName>Per Ear</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxDurationType__c</fullName>
        <label>MaxDurationType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Episode</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Year-to-date</fullName>
                </value>
                <value>
                    <fullName>Live Birth</fullName>
                </value>
                <value>
                    <fullName>Pregnancy</fullName>
                </value>
                <value>
                    <fullName>Months following patients death</fullName>
                </value>
                <value>
                    <fullName>Visit</fullName>
                </value>
                <value>
                    <fullName>Hospice Eligibility Period</fullName>
                </value>
                <value>
                    <fullName>Admission</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxDuration_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration High</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Range__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration_Valid_Ranges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxDuration Valid Ranges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxDuration__c</fullName>
        <label>MaxDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxRange_Type__c</fullName>
        <label>MaxRange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MaxValueRange</fullName>
                </value>
                <value>
                    <fullName>MaxDurationRange</fullName>
                </value>
                <value>
                    <fullName>MaxValueValid</fullName>
                </value>
                <value>
                    <fullName>MaxDurationValid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxRow_InValid_Ranges__c</fullName>
        <formula>Text(999999999999)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MaxRow InValid Ranges</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxRow_Mandate_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxRow Mandate Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxRow_Value__c</fullName>
        <formula>TRIM(IF( TEXT(Type__c)='MaxRow',
(if(text(MaxValue__c)!='',TEXT(MaxValue__c) +' ','')+ 
If(Text(MaxType__c)!='',Text(MaxType__c) +' ','')+
if(Text(MaxApply__c)!='',Text(MaxApply__c) +' ' ,'')+
if(Text(MaxDuration__c ) !='' ,'Per'+' ','') + 
if(Text(MaxDuration__c )!='',Text(MaxDuration__c )+ ' ' ,'')+
if(Text(MaxDurationType__c)!='',Text(MaxDurationType__c)+ ' ','')+
if(Text(MaxAgeFrom__c)!='',Text(MaxAgeFrom__c) +' ','')+
if(Text(MaxAgeFrom__c)!='' &amp;&amp; TEXT(MaxAgeTo__c)!='','to'+' ','')+
if(TEXT(MaxAgeTo__c)!='',TEXT(MaxAgeTo__c) +' ','') +
Text(MaxAgeType__c)), 
''))</formula>
        <label>MaxRow Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxType__c</fullName>
        <label>MaxType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visits</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>Mammogram</fullName>
                </value>
                <value>
                    <fullName>Hearing Aid</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
                <value>
                    <fullName>Attempts</fullName>
                </value>
                <value>
                    <fullName>Wig</fullName>
                </value>
                <value>
                    <fullName>Home Health Aide Visits</fullName>
                </value>
                <value>
                    <fullName>Home Care Days</fullName>
                </value>
                <value>
                    <fullName>Home Care Visits</fullName>
                </value>
                <value>
                    <fullName>Exam</fullName>
                </value>
                <value>
                    <fullName>Pair of Contact Lenses/Eye Glasses</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Pulmonary Rehabilitation Program</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>EKG</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxValue_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue High</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Range__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue_Valid_Ranges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MaxValue Valid Ranges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxValue__c</fullName>
        <label>MaxValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCS_Benefit_Id__c</fullName>
        <formula>Plan_Benefits__r.PCS_Benefit_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCS Benefit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBenefitName__c</fullName>
        <formula>Plan_Benefits__r.Benefit_Name__c</formula>
        <label>ParentBenefitName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Benefits__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Plan Benefits</label>
        <referenceTo>AIA_Plan_Benefits__c</referenceTo>
        <relationshipLabel>Plan Limitation</relationshipLabel>
        <relationshipName>Plan_Limitation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TierAgeFrom__c</fullName>
        <label>TierAgeFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierAgeTo__c</fullName>
        <label>TierAgeTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierAgeType__c</fullName>
        <label>TierAgeType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierLimitDurationType__c</fullName>
        <label>TierLimitDurationType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar Year</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierLimitFrom__c</fullName>
        <label>TierLimitFrom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierLimitTo__c</fullName>
        <label>TierLimitTo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierLimitType__c</fullName>
        <label>TierLimitType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visits</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_Value__c</fullName>
        <formula>IF(TEXT(Type__c)='TierLimit',
(IF(Text(TierLimitFrom__c)!='',Text(TierLimitFrom__c) +' ','')+
if(Text(TierLimitFrom__c)!='' &amp;&amp; Text(TierLimitTo__c)!='','to'+' ','')+
IF(Text(TierLimitTo__c)!='',Text(TierLimitTo__c) +' ','')+
IF(Text(TierLimitType__c)!='',Text(TierLimitType__c) +' ','')+ 
IF(Text(TierLimitDurationType__c)!='',Text(TierLimitDurationType__c)+' ','')+ 
IF(Text(TierAgeFrom__c)!='',Text(TierAgeFrom__c)+' ','')+
if(Text(TierAgeFrom__c)!='' &amp;&amp; Text(TierAgeTo__c)!='','to'+' ','')+
IF(Text(TierAgeTo__c)!='',Text(TierAgeTo__c) +' ','')+
Text(TierAgeType__c)),'')</formula>
        <label>Tier Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MaxRow</fullName>
                </value>
                <value>
                    <fullName>TierLimit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variation_Condition_ID__c</fullName>
        <formula>Plan_Benefits__r.Variation_Condition_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variation Condition ID</label>
        <type>Text</type>
    </fields>
    <label>Plan Limitation</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Plan Limitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Limitation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>